도전과제 이미지 캡션 및 정렬 보정

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -360,10 +360,10 @@
                       제어 회로도</figcaption>
                   </figure>
                   <figure
-                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
+                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem 0.5rem 0.9rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"
                       style="width: 100%; height: auto; border-radius: 4px; transform: scaleY(1.18); transform-origin: center top;">
-                    <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
+                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
                       망막 완전교정 측정장비 시제품</figcaption>
                   </figure>
                 </div>
@@ -399,19 +399,19 @@
                   모델은 지속적인 업데이트를 통해 고도화되고 있으며, 이를 기반으로 굴절이상을 확률적 모델에 근거하여 실시간으로 산출합니다.
                 </p>
                 <!-- Row 1: Experiment (Left) + Optical/IR Views (Right) -->
-                <div style="display: flex; gap: 1rem; margin-bottom: 2rem; flex-wrap: wrap;">
+                <div style="display: flex; gap: 0.8rem; margin-bottom: 2rem; flex-wrap: wrap; align-items: flex-start;">
                   <!-- Left: Experiment Setup -->
                   <figure
                     style="flex: 0 0 65%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/experiment_setup.png"
-                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 100%; height: auto; border-radius: 4px; display: block; transform: scale(1.1); transform-origin: left top;">
+                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 110%; height: auto; border-radius: 4px; display: block; margin-left: -5%;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
                       Raspberry Pi + Arduino 기반 실시간 안굴절계 시제품</figcaption>
                   </figure>
 
                   <!-- Right: Vertical Column -->
                   <div
-                    style="flex: 1; display: flex; flex-direction: column; gap: 0.3rem; justify-content: center; align-items: center;">
+                    style="flex: 1; display: flex; flex-direction: column; gap: 0.25rem; justify-content: center; align-items: center;">
                     <!-- Top Right -->
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
@@ -436,7 +436,7 @@
                 </div>
 
                 <!-- Bottom: AI 학습 파이프라인 (0.75 scale) -->
-                <div style="margin: -1rem 0 1.5rem; text-align: center;">
+                <div style="margin: -1.2rem 0 1.5rem; text-align: center;">
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 75%;">
                     <img src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
@@ -474,7 +474,7 @@
                 <!-- 첫째 줄: 적외선 패턴 투사(좌) + 하이브리드 복원(우) -->
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1rem; align-items: flex-start;">
                   <figure
-                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; transform: translateY(-6px);">
+                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; transform: translateY(-8px);">
                     <img src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
@@ -483,7 +483,7 @@
                   <figure
                     style="flex: 0 1 47%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(0.78); transform-origin: center top;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(0.78); transform-origin: center top; display: block; margin: 0 auto;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
