도전과제 분석 UI 이미지 교체

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -360,10 +360,10 @@
                       제어 회로도</figcaption>
                   </figure>
                   <figure
-                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem 0.5rem 0.9rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
+                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem 0.5rem 1.4rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"
                       style="width: 100%; height: auto; border-radius: 4px; transform: scaleY(1.18); transform-origin: center top;">
-                    <figcaption style="margin-top: 0.9rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
+                    <figcaption style="margin-top: 1.4rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
                       망막 완전교정 측정장비 시제품</figcaption>
                   </figure>
                 </div>
@@ -411,24 +411,24 @@
 
                   <!-- Right: Vertical Column -->
                   <div
-                    style="flex: 1; display: flex; flex-direction: column; gap: 0.25rem; justify-content: center; align-items: center;">
+                    style="flex: 1; display: flex; flex-direction: column; gap: 0.15rem; justify-content: center; align-items: center;">
                     <!-- Top Right -->
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                       <img src="../../assets/images/research/phase3/retinoscope_view.png" alt="검영기 뷰"
-                        style="width: 88%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
+                        style="width: 90%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">검영법
                         광학계 뷰</figcaption>
                     </figure>
 
                     <!-- Arrow -->
-                    <div style="font-size: 2rem; color: #94a3b8; line-height: 1;">↓</div>
+                    <div style="font-size: 1rem; color: #94a3b8; line-height: 1;">↓</div>
 
                     <!-- Bottom Right -->
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                       <img src="../../assets/images/research/phase3/ir_pupil_image.png" alt="이진화 이미지 처리"
-                        style="width: 88%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
+                        style="width: 90%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">이진화
                         이미지 처리</figcaption>
                     </figure>
@@ -436,9 +436,9 @@
                 </div>
 
                 <!-- Bottom: AI 학습 파이프라인 (0.75 scale) -->
-                <div style="margin: -1.2rem 0 1.5rem; text-align: center;">
+                <div style="margin: -1.8rem 0 1.2rem; text-align: center;">
                   <figure
-                    style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 75%;">
+                    style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 90%;">
                     <img src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
                       style="width: 100%; height: auto; border-radius: 4px">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
@@ -474,16 +474,16 @@
                 <!-- 첫째 줄: 적외선 패턴 투사(좌) + 하이브리드 복원(우) -->
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1rem; align-items: flex-start;">
                   <figure
-                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; transform: translateY(-8px);">
+                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; transform: translateY(-8px); overflow: hidden;">
                     <img src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
-                      style="width: 100%; height: auto; border-radius: 4px;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(1.2); transform-origin: center top;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
                       패턴 투사 및 이미지 처리 파이프라인</figcaption>
                   </figure>
                   <figure
-                    style="flex: 0 1 47%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 47%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
                     <img src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(0.78); transform-origin: center top; display: block; margin: 0 auto;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(1.2); transform-origin: center top; display: block; margin: 0 auto;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
@@ -491,9 +491,9 @@
                 <!-- 둘째 줄: 분석 UI -->
                 <div style="margin-bottom: 1.5rem;">
                   <figure
-                    style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; max-width: 660px; margin: 0 auto;">
+                    style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; max-width: 660px; margin: 0 auto; overflow: hidden;">
                     <img src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png" alt="분석 UI"
-                      style="width: 100%; height: auto; border-radius: 4px;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(1.2); transform-origin: center center; display: block; margin: 0 auto;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
                   </figure>
