도전과제 분석 UI 캐시 무효화

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -492,7 +492,7 @@
                 <div style="margin-bottom: 1.5rem;">
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; max-width: 660px; margin: 0 auto; overflow: hidden;">
-                    <img src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png" alt="분석 UI"
+                    <img src="../../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124" alt="분석 UI"
                       style="width: 100%; height: auto; border-radius: 4px; transform: scale(1.2); transform-origin: center center; display: block; margin: 0 auto;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">실시간
                       각공막 3D 분석 소프트웨어</figcaption>
