도전과제 이미지 크기 및 캡션 보정

--- a/research/overview.html
+++ b/research/overview.html
@@ -509,9 +509,9 @@
                 <div style="margin-bottom: 1.5rem;">
                   <figure
                     style="background: #fff; padding: 0.5rem; border-radius: 8px; border: 1px solid #e2e8f0; max-width: 660px; margin: 0 auto;">
-                    <img src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png"
+                    <img src="../assets/images/research/phase3/corneo_scleral_analysis_ui.png?v=20250124"
                       alt="Real-time Corneo-Scleral Analysis Software UI"
-                      style="width: 100%; height: auto; border-radius: 4px" />
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(0.5); transform-origin: center center; display: block; margin: 0 auto;" />
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
                       Real-time Corneo-Scleral 3D Analysis Software
                     </figcaption>
