랜딩/도전과제/이미지 일관성 UI 개편

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col-image col-flex-center">
-          <img src="assets/images/vision_engineering_concept.png?v=5" alt="Vision Engineering Process" loading="lazy" class="hero-image" />
+          <img src="assets/images/research/phase4_experiment_scene_new.jpg?v=1" alt="Vision Research Experiment Scene" loading="lazy" class="hero-image" />
         </div>
       </div>
     </section>
