--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -70,12 +70,6 @@
 
         <!-- Lead Introduction -->
         <div class="challenge-list">
-          <!-- Phase Tab Navigation -->
-          <nav class="phase-tab-nav">
-            <a href="overview.html" class="phase-tab-link active">Phase 1-2: 기초연구</a>
-            <a href="overview-advanced.html" class="phase-tab-link ">Phase 3-4: 시제품·AI</a>
-          </nav>
-
           <!-- Lead text removed -->
 
           <!-- PHASE 1: Visual Neuroscience -->
@@ -365,8 +359,8 @@
               </div>
             </div>
           </div>
-
-                  </div>
+          <div id="advanced-phase-mount" class="advanced-phase-content" data-advanced-phase-source="overview-advanced.html"></div>
+        </div>
       </div>
     </section>
   </main>
