--- a/research/overview-advanced.html
+++ b/research/overview-advanced.html
@@ -384,6 +384,11 @@
     </section>
   </main>
 
+  <script>
+    if (window.self === window.top) {
+      window.location.replace("overview.html#phase-3");
+    }
+  </script>
   <script src="../assets/js/main.js?v=2.2" defer></script>
 </body>
 
