--- a/ko/research/overview-advanced.html
+++ b/ko/research/overview-advanced.html
@@ -334,6 +334,11 @@
     </section>
   </main>
 
+  <script>
+    if (window.self === window.top) {
+      window.location.replace("overview.html#phase-3");
+    }
+  </script>
   <script src="../../assets/js/main.js?v=2.2" defer></script>
 </body>
 
