--- a/research/overview.html
+++ b/research/overview.html
@@ -72,12 +72,6 @@
 
         <!-- Lead Introduction -->
         <div class="challenge-list">
-          <!-- Phase Tab Navigation -->
-          <nav class="phase-tab-nav">
-            <a href="overview.html" class="phase-tab-link active">Phase 1-2: Foundation</a>
-            <a href="overview-advanced.html" class="phase-tab-link ">Phase 3-4: Prototype & AI</a>
-          </nav>
-
           <!-- Lead text removed -->
 
           <!-- PHASE 1: Visual Neuroscience -->
@@ -359,8 +353,8 @@
               </div>
             </div>
           </div>
-
-                  </div>
+          <div id="advanced-phase-mount" class="advanced-phase-content" data-advanced-phase-source="overview-advanced.html"></div>
+        </div>
       </div>
     </section>
   </main>
