--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -346,12 +346,14 @@
                       망막 완전교정 pilot study</figcaption>
                   </figure>
                   <figure class="overview-figure-card">
-                    <img loading="lazy" src="../../assets/images/research/phase2/led_flicker.gif" alt="LED 회로도">
+                    <img loading="lazy" src="../../assets/images/research/phase2/led_flicker.gif" alt="LED 회로도"
+                      style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;">
                     <figcaption class="overview-figcaption">LED
                       제어 회로도</figcaption>
                   </figure>
                   <figure class="overview-figure-card">
-                    <picture><source srcset="../../assets/images/research/phase2/peripheral_prototype.webp" type="image/webp"><img loading="lazy" src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"></picture>
+                    <picture><source srcset="../../assets/images/research/phase2/peripheral_prototype.webp" type="image/webp"><img loading="lazy" src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"
+                        style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;"></picture>
                     <figcaption class="overview-figcaption">주변부
                       망막 완전교정 측정장비 시제품</figcaption>
                   </figure>
