--- a/research/overview.html
+++ b/research/overview.html
@@ -339,13 +339,15 @@
                   </figure>
                   <figure
                     style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
-                    <img loading="lazy" src="../assets/images/research/phase2/led_flicker.gif" alt="LED Circuit">
+                    <img loading="lazy" src="../assets/images/research/phase2/led_flicker.gif" alt="LED Circuit"
+                      style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;">
                     <figcaption class="overview-figcaption">LED
                       Control Circuit Diagram</figcaption>
                   </figure>
                   <figure
                     style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
-                    <picture><source srcset="../assets/images/research/phase2/peripheral_prototype.webp" type="image/webp"><img loading="lazy" src="../assets/images/research/phase2/peripheral_prototype.gif" alt="Prototype"></picture>
+                    <picture><source srcset="../assets/images/research/phase2/peripheral_prototype.webp" type="image/webp"><img loading="lazy" src="../assets/images/research/phase2/peripheral_prototype.gif" alt="Prototype"
+                        style="width: 100%; height: 220px; object-fit: contain; object-position: center center; display: block;"></picture>
                     <figcaption class="overview-figcaption">
                       Peripheral Retinal Full-correction Prototype</figcaption>
                   </figure>
